# games

./: CMakeLists.txt  README.md
queen_problem/: CMakeLists.txt  graph.hpp  main.cpp  node.hpp  solvers.h
shannon_switching_game/: CMakeLists.txt  edge.hpp  game.hpp  graph.hpp  graph_parser.hpp  main.cpp  player.hpp  utils.hpp
shannon_switching_game/graphs/: example_graph_1.txt  example_graph_2.txt  simple_game.txt
shannon_switching_game/tests/: CMakeLists.txt  test_edge.cpp  test_game.cpp  test_graph.cpp
